--- a/pages/templates/pages/navbar.html
+++ b/pages/templates/pages/navbar.html
@@ -14,6 +14,11 @@
                 <button class="search-btn"><i class="fa fa-search" alt="search button" id="search-btn"></i></button>
             </div>
 
+        {% if request.user.is_superuser %}
+        navbar con el admin logueado
+        {% elif request.user.is_authenticated %}
+        navbar con el usuario logueado
+        {% else %} <!--navbar con usuario deslogeado-->
         <div class="navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -63,6 +68,7 @@
                 </a>
             </div>
         </div>
+        {% endif %}
     <!--end navbar-->
 
 
