--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,11 +1,4 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block css %}
-<link rel="stylesheet" href="{% static 'navbar/css/style.css' %}">
-<script src="https://kit.fontawesome.com/f363b53072.js"></script>
-{% endblock %}
-
+{% extends 'pages/base.html' %}
 {% block content %}
 <div class="log-container">
   <h2 class="log-title"><i class="fas fa-dragon"></i>Log In</h2>
