--- a/profiles/templates/profiles/billing_address_edit.html
+++ b/profiles/templates/profiles/billing_address_edit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'pages/base.html' %}
 {% block content %}
 <form enctype="multipart/form-data" method="POST"> 
     {% csrf_token %}
