--- a/profiles/templates/profiles/profile_edit.html
+++ b/profiles/templates/profiles/profile_edit.html
@@ -1,12 +1,4 @@
-{% extends 'base.html' %}
-
-{% load static %}
-
-{% block css %}
-<link rel="stylesheet" href="{% static 'navbar/css/style.css' %}">
-<script src="https://kit.fontawesome.com/f363b53072.js"></script>
-{% endblock %}
-
+{% extends 'pages/base.html' %}
 {% block content %}
 <div class="profile-container">
 <form enctype="multipart/form-data" method="POST" class="profile-text"> 
