--- a/pages/static/css/style.css
+++ b/pages/static/css/style.css
@@ -51,19 +51,19 @@ button{
   margin: 1.25rem;
   transition: var(--transition);
   background: var(--primary);
-  border-radius: 4px;
-  border: 1px solid var(--highlight);
+  border-radius: 0.25rem;
+  border: 0.06rem solid var(--highlight);
 }
 .alert button{
   position: absolute;
-  right: 5px;
+  right: 0.3rem;
   color: var(--secondary);
-  margin: 12px;
-  width: 20px;
-  height: 20px;
+  margin: 0.8rem;
+  width: 1.3rem;
+  height: 1.3rem;
   background: var(--primary);
   border-radius: 50%;
-  border: 1px solid transparent;
+  border: 0.06rem solid transparent;
   transition: var(--transition);
 }
 .alert button:hover{
@@ -72,8 +72,8 @@ button{
 }
 .alert .dot-not{
   position: absolute;
-  top: 2px;
-  left: 35px;
+  top: 0.13rem;
+  left: 2.18rem;
   font-size: 1.2rem;
   color: var(--highlight);
 }
@@ -104,15 +104,15 @@ button{
 .profile-container{
   position: absolute;
   left: 40%;
-  top: 200px;
-  margin: 5px;
+  top: 12.5rem;
+  margin: 0.3rem;
 }
   /***       signup style       ***/
 .signup-container{
   position: absolute;
   left: 40%;
-  top: 100px;
-  margin: 50px;
+  top: 6rem;
+  margin: 3rem;
 }
 .signup-container .signup-title{
   text-align: center;
@@ -120,35 +120,35 @@ button{
   font-weight: 300;
   font-size: 2.5rem;
   text-transform: uppercase;
-  letter-spacing: 5px;
+  letter-spacing: 0.3rem;
 }
 .signup-container .signup-title i{
   text-align: left;
-  margin: 10px;
+  margin: 0.6rem;
 }
 .signup-container .signup-text{
   position: absolute;
-  line-height: 40px;
-  top: 100px;
-  left: 50px;
+  line-height: 3rem;
+  top: 6rem;
+  left: 3rem;
   color: var(--secondary);
   font-size: 1.3rem;
 }
 .signup-container .signup-btn{
   position: absolute;
-  bottom: -30px;
+  bottom: -1.8rem;
   background: var(--primary);
   cursor: pointer;
   font-size: 0.9rem;
   font-weight: 300;
   opacity: 0.9;
-  left: 65px;
+  left: 4.06rem;
   padding: 0.4rem 0;
-  border-width: 0.5px;
-  border-radius: 5px;
+  border-width: 0.03rem;
+  border-radius: 0.3rem;
   border-style: solid;
   margin: 0 0.5rem;
-  width: 100px;
+  width: 6rem;
   transition: var(--transition);
 }
 .signup-container .signup-btn:hover{
@@ -158,10 +158,10 @@ button{
 }
 .signup-container input{
   position: relative;
-  width: 200px;
-  left: 20px;
-  bottom: 9px;
-  padding: 6px;
+  width: 12.5rem;
+  left: 1.3rem;
+  bottom: 0.56rem;
+  padding: 0.4rem;
   font-size: 0.9rem;
   border-color: var(--highlight);
   background: #adffd1;
@@ -173,8 +173,8 @@ button{
 .log-container{
   position: absolute;
   left: 40%;
-  top: 100px;
-  margin: 50px;
+  top: 6rem;
+  margin: 3rem;
 }
 .log-container .log-title{
   text-align: center;
@@ -182,11 +182,11 @@ button{
   font-weight: 300;
   font-size: 2.5rem;
   text-transform: uppercase;
-  letter-spacing: 5px;
+  letter-spacing: 0.3rem;
 }
 .log-container .log-title i{
   text-align: left;
-  margin: 10px;
+  margin: 0.6rem;
 }
 .log-container .log-btn{
   position: absolute;
@@ -194,13 +194,13 @@ button{
   font-size: 0.9rem;
   font-weight: 300;
   opacity: 0.9;
-  left: 65px;
+  left: 4.63rem;
   padding: 0.4rem 0;
-  border-width: 0.5px;
-  border-radius: 5px;
+  border-width: 0.03rem;
+  border-radius: 0.3rem;
   border-style: solid;
   margin: 0 0.5rem;
-  width: 100px;
+  width: 6rem;
   transition: var(--transition);
 }
 .log-container .log-btn:hover{
@@ -210,16 +210,16 @@ button{
 }
 .log-container .log-text{
   position: absolute;
-  top: 100px;
-  left: 50px;
+  top: 6rem;
+  left: 3rem;
   color: var(--secondary);
   font-size: 1.3rem;
 }
 .log-container .log-text input{
-  width: 200px;
-  left: 20px;
-  top: 8px;
-  padding: 6px;
+  width: 12.5rem;
+  left: 1.3rem;
+  top: 0.5rem;
+  padding: 0.4rem;
   font-size: 0.9rem;
   position: relative;
   border-color: var(--highlight);
@@ -304,15 +304,15 @@ button{
 }
 .nav-btns button{
   display: inline-block;
-  border-radius: 5px;
+  border-radius: 0.3rem;
   font-size: 0.9rem;
   font-weight: 300;
   opacity: 0.9;
   padding: 0.4rem 0;
-  border-width: 0.5px;
+  border-width: 0.03rem;
   border-style: solid;
   margin: 0 0.5rem;
-  width: 100px;
+  width: 6rem;
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
@@ -326,16 +326,16 @@ button{
   text-transform: uppercase;
   font-size: 0.8rem;
   text-align: left;
-  margin-left: 50px;
+  margin-left: 3rem;
   visibility: hidden;
 }
 .search-container button{
   background: var(--primary);
-  border-radius: 5px;
+  border-radius: 0.3rem;
   font-size: 0.8rem;
   position: absolute;
   opacity: 0.9;
-  padding: 6px;
+  padding: 0.4rem;
   color: var(--secondary);
   border: 1px solid transparent;
   transition: var(--transition);
@@ -343,17 +343,17 @@ button{
 .search-container input{
   position: relative;
   font-size: 0.9rem;
-  padding: 6px;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  width: 20px;
+  padding: 0.4rem;
+  border: 0.06rem solid transparent;
+  border-radius: 0.3rem;
+  width: 1.3rem;
   transition: var(--transition);
   background: #adffd1;
   cursor: text;
 }
 .search-container input.active{
-  width: 200px;
-  left: 25px;
+  width: 12.5rem;
+  left: 1.6rem;
   border-color: var(--highlight);
 }
 .search-container input:focus{
@@ -431,14 +431,14 @@ button{
   color: var(--secondary);
 }
 .navbar-logo{
-  padding: 30px;
+  padding: 1.87rem;
   font-size: 1.5rem;
   font-weight: 800;
   color: var(--secondary);
   transition: var(--transition);
 }
 .navbar-logo:hover{
-  text-shadow: 6px 8px 7px var(--shadow);
+  text-shadow: 0.4rem 0.5rem 0.43rem var(--shadow);
 }
 .navbar-toggler{
   display: none;
@@ -450,12 +450,12 @@ button{
 .navbar.sticky{
   width: 99%;
   height: 7%;
-  margin: 8.5px;
-  border: 1px solid var(--shadow);
+  margin: 0.53rem;
+  border: 0.06rem solid var(--shadow);
 }
 .navbar.sticky .navbar-logo{
   font-size: 1.3rem;
-  padding: 25px;
+  padding: 1.6rem;
 }
 
 @media all and (max-width: 992px){
@@ -516,10 +516,10 @@ button{
   color: #000;
 }
 .nav-link:hover{
-  text-shadow: 0 0 4px var(--highlight);
+  text-shadow: 0 0 0.3rem var(--highlight);
 }
 .nav-link .span-about:hover{
-  text-shadow: 6px 8px 7px var(--shadow);
+  text-shadow: 0.4rem 0.5rem 0.43rem var(--shadow);
 }
 .showNav{
   width: 100%;
@@ -542,11 +542,11 @@ button{
   /***       image slider style       ***/
 .img-slider{
   position: relative;
-  top: 90px;
+  top: 5.62rem;
   left: 33.33%;
-  width: 800px;
-  height: 500px;
-  margin: 10px;
+  width: 50rem;
+  height: 31.2rem;
+  margin: 0.6rem;
 }
 .img-slider .slide{
   z-index: 1;
@@ -557,7 +557,7 @@ button{
 }
 .img-slider img{
   z-index: 1;
-  border-radius: 5px;
+  border-radius: 0.3rem;
 }
 .img-slider .slide.active{
   -webkit-clip-path: circle(150% at 0 50%);
@@ -572,27 +572,27 @@ button{
 .img-slider .slide .info{
   position: relative;
   cursor: default;
-  bottom: 500px;
-  right: 500px;
-  padding: 15px 30px;
+  bottom: 31.2rem;
+  right: 31.2rem;
+  padding: 0.9rem 1.87rem;
 }
 .img-slider .slide .info a{
   color: var(--secondary);
-  font-size: 45px;
+  font-size: 2.81rem;
   text-transform: uppercase;
   font-weight: 800;
-  letter-spacing: 2px;
+  letter-spacing: 0.13rem;
 }
 .img-slider .slide .info a:hover{
-  text-shadow: 6px 8px 7px var(--shadow);
+  text-shadow: 0.4rem 0.5rem 0.43rem var(--shadow);
 }
 .img-slider .slide .info p{
   color: var(--secondary);
   background: var(--primary);
-  font-size: 16px;
+  font-size: 1rem;
   width: 60%;
-  padding: 10px;
-  border-radius: 4px;
+  padding: 0.6rem;
+  border-radius: 0.3rem;
 }
 .img-slider .navigation{
   z-index: 2;
@@ -600,7 +600,7 @@ button{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  top: 500px;
+  top: 31.2rem;
   right: 0;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -608,12 +608,12 @@ button{
 .img-slider .navigation .btn{
   background: var(--primary);
   transition: var(--transition);
-  width: 12px;
-  height: 12px;
-  margin: 10px;
+  width: 0.8rem;
+  height: 0.8rem;
+  margin: 0.6rem;
   opacity: 0.9;
   border-radius: 50%;
-  border: 1px solid transparent;
+  border: 0.06rem solid transparent;
   cursor: pointer;
 }
 .img-slider .navigation .btn:hover{
@@ -625,8 +625,8 @@ button{
   background: var(--shadow);
   opacity: 1;
   border-color: var(--highlight);
-  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 0.13rem rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 0.13rem rgba(0, 0, 0, 0.5);
 }
 
   /***       cards       ***/
