UPDATED PRE ORDER CARDS
deleted 3 of them, card tag deleted and added a new banner to separate sections

--- a/pages/templates/pages/footer.html
+++ b/pages/templates/pages/footer.html
@@ -4,7 +4,7 @@
             <div class="footer-col">
                 <h4>Newsletter</h4>
                 <ul>
-                    <li>Subscribe for exclusive offers, special events and a good tall fish tale or two.</li>
+                    <li>Subscribe for exclusive offers, latest update and some other tips.</li>
                     <div class="newsletter">
                         <input type="text" placeholder="Email" id="search">
                         <button class="search-btn">sign up</button>
