--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -72,11 +72,12 @@
     </div>
 
     <div class="card-list" id="card-list">
+        <h2 class="banner-card">Pre-Order now our next collection season.</h2>
         <button class="arrows one" id="slide-left"><i class="fas fa-angle-left"></i></button>
     <div class="card-container" id="card-container">
         
     <div class="card" id="card">
-        <span class="card-tag">Pre-Order now</span>
+        
         <div class="card-header">
             <img src="{% static 'images/jordan2.jpg' %}">
         </div>
@@ -99,7 +100,7 @@
         </div>
     </div>
     <div class="card" id="card">
-        <span class="card-tag">Pre-Order now</span>
+        
         <div class="card-header">
             <img src="{% static 'images/jean2.jpg' %}">
         </div>
@@ -122,7 +123,7 @@
         </div>
     </div>
     <div class="card" id="card">
-        <span class="card-tag">Pre-Order now</span>
+        
         <div class="card-header">
             <img src="{% static 'images/accesories2.jpg' %}">
         </div>
@@ -144,74 +145,6 @@
             </a>
         </div>
     </div>
-    <div class="card" id="card">
-        <span class="card-tag">Pre-Order now</span>
-        <div class="card-header">
-            <img src="{% static 'images/outerwear2.jpg' %}">
-        </div>
-        <div class="card-body">
-            <h4 class="product-title">Supreme The North Face</h4>
-            <p class="product-status">Ships in 3-4 days</p>
-            <h3 class="product-price">$985.00</h3>
-        </div>
-        <div class="card-footer">
-            <a href="#">
-                <button class="card-btn btn-secondary">
-                    Info
-                </button>
-            </a>
-            <a href="#">
-                <button class="card-btn btn-primary">
-                    Pre-order
-                </button>
-            </a>
-        </div>
-    </div>
-    <div class="card" id="card">
-        <span class="card-tag">Pre-Order now</span>
-        <div class="card-header">
-            <img src="{% static 'images/jordantee1.jpg' %}">
-        </div>
-        <div class="card-body">
-            <h4 class="product-title">Supreme Jordan Tee</h4>
-            <p class="product-status">Ships in 3-4 days</p>
-            <h3 class="product-price">$300.00</h3>
-        </div>
-        <div class="card-footer">
-            <a href="#">
-                <button class="card-btn btn-secondary">
-                    Info
-                </button>
-            </a>
-            <a href="#">
-                <button class="card-btn btn-primary">
-                    Pre-order
-                </button>
-            </a>
-        </div>
-    </div>
-    <div class="card" id="card">
-        <span class="card-tag">Pre-Order now</span>
-        <div class="card-header">
-            <img src="{% static 'images/bapehoodie1.jpg' %}">
-        </div>
-        <div class="card-body">
-            <h4 class="product-title">BAPE x XO Hoodie</h4>
-            <p class="product-status">Ships in 3-4 days</p>
-            <h3 class="product-price">$787.00</h3>
-        </div>
-        <div class="card-footer">
-            <a href="#">
-                <button class="card-btn btn-secondary">
-                    Info
-                </button>
-            </a>
-            <a href="#">
-                <button class="card-btn btn-primary">
-                    Pre-order
-                </button>
-            </a>
-        </div>
 
     </div>
     </div>
@@ -229,6 +162,5 @@
         </script>
     </div>
 </body>
-    {% block js %}<script src="{% static 'javascript/script-home.js' %}"></script>{% endblock %}
 
 {% endblock %}
