--- a/pages/static/css/stylee.css
+++ b/pages/static/css/stylee.css
@@ -630,45 +630,69 @@ button{
 }
 
   /***       cards       ***/
+.banner-card{
+  color: var(--secondary);
+  position: absolute;
+  bottom: 0;
+  margin: 0.6rem;
+  left: 12.5rem;
+  background: var(--primary);
+  border-radius: 0.3rem;
+  width: 45%;
+}
+.banner-card::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: -0.6rem;
+  background-color: #59826b;
+  height: 0.13rem;
+  box-sizing: border-box;
+  width: 6rem;
+}
+.banner-card::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -0.6rem;
+  background-color: #59826b;
+  height: 0.13rem;
+  box-sizing: border-box;
+  width: 8rem;
+}
 .card-list{
   display: flex;
+  margin-top: 100px;
 }
 .card-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 20px;
+  grid-column-gap: 1.3rem;
 }
 .arrows{
   display: none;
 }
 .card{
   position: relative;
-  top: 500px;
-  left: 200px;
-  max-width: 500px;
+  top: 31.2rem;
+  left: 12.5rem;
+  max-width: 31.2rem;
   min-height: 50vh;
-  margin: 10px;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
-}
-.card-tag{
-  background: var(--primary);
-  padding: 5px 10px;
-  color: var(--secondary);
-  border-radius: 2px;
-  cursor: default;
+  margin: 0.6rem;
+  padding: 1.87rem;
+  border-radius: 0.6rem;
+  box-shadow: 0 0 0.9rem rgba(0, 0, 0, 0.25);
 }
 .card-header{
-  padding: 30px 50px;
+  padding: 1.87rem 3rem;
   text-align: center;
   cursor: default;
 }
 .card-header img{
-  max-height: 200px;
+  max-height: 12.5rem;
 }
 .product-title{
-  font-size: 30px;
+  font-size: 1.87rem;
   color: var(--secondary);
   cursor: default;
   line-height: 1;
@@ -678,9 +702,9 @@ button{
   cursor: default;
 }
 .product-price{
-  font-size: 30px;
+  font-size: 1.87rem;
   color: var(--secondary);
-  margin: 20px 0;
+  margin: 1.3rem 0;
   cursor: default;
 }
 .card-footer{
@@ -688,13 +712,13 @@ button{
   justify-content: space-between;
 }
 .card-btn{
-  padding: 10px 40px;
+  padding: 0.6rem 3rem;
   border-style: solid;
   opacity: 0.9;
   border-color: var(--primary);
   font-family: inherit;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 0.3rem;
+  font-size: 1rem;
   width: 100%;
   cursor: pointer;
   transition: var(--transition);
@@ -717,35 +741,35 @@ button{
   opacity: 0.7;
 }
 .card-footer .card-btn:first-child{
-  margin-right: 15px;
+  margin-right: 0.9rem;
 }
   /***       media queries       ***/
 @media all and (max-width: 992px){
   .img-slider{
-    width: 600px;
+    width: 37.5rem;
   }
   .img-slider img{
-    width: 600px;
+    width: 37.5rem;
   }
   .img-slider .slide .info{
-    right: 312px;
+    right: 19.5rem;
   }
   .img-slider .slide .info p{
     width: 40%;
   }
   .img-slider .slide .info a{
-    font-size: 30px;
+    font-size: 1.87rem;
   }
   .img-slider .navigation{
-    top: 300px;
-    left: 50px;
+    top: 18.7rem;
+    left: 3rem;
   }
   .card-list{
     position: relative;
     display: flex;
-    right: 100px;
+    right: 6rem;
     max-width: 90vh;
-    top: 150px;
+    top: 9.37rem;
   }
   .card-container{
     display: flex;
@@ -757,24 +781,24 @@ button{
     top: 0px;
   }
   .card-header img{
-    max-height: 100px;
+    max-height: 6.25rem;
   }
   .card-btn{
-    padding: 5px 20px;
-    width: 90px;
-    font-size: 13px;
+    padding: 0.3rem 1.3rem;
+    width: 6rem;
+    font-size: 0.81rem;
   }
   .card-tag{
-    padding: 2.5px 5px;
+    padding: 0.15rem 0.3rem;
   }
   .product-title{
-    font-size: 20px;
+    font-size: 1.3rem;
   }
   .product-price{
-    font-size: 20px;
+    font-size: 1.3rem;
   }
   .product-status{
-    font-size: 13px;
+    font-size: 0.81rem;
   }
   .arrows{
     z-index: 1;
@@ -798,7 +822,8 @@ button{
     left: 9.3rem;
   }
   .two{
-    left: 61.2rem;
+    left: 50rem;
+    bottom: -5.56rem;
   }
   .arrows:hover{
     background: var(--shadow);
@@ -816,36 +841,36 @@ button{
   margin-top: 6rem;
 }
 .footer-container{
-  border: 1px solid #adffd1;
-  height: 350px;
+  border: 0.06rem solid #adffd1;
+  height: 21.87rem;
 }
 .row{
   display: flex;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 1.3rem;
 }
 .footer-col{
   width: 50%;
-  padding: 0 300px;
+  padding: 0 18.7rem;
 }
 .footer-col h4{
-  font-size: 18px;
+  font-size: 1.1rem;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin-bottom: 1.87rem;
   position: relative;
 }
 .footer-col h4::before{
   content: '';
   position: absolute;
   left: 0;
-  bottom: -10px;
+  bottom: -0.6rem;
   background-color: #59826b;
-  height: 2px;
+  height: 0.13rem;
   box-sizing: border-box;
-  width: 50px;
+  width: 3rem;
 }
 .footer-col ul li:not(:last-child){
-  margin-bottom: 10px;
+  margin-bottom: 0.6rem;
 }
 .footer-col ul li a{
   color: #59826b;
@@ -853,32 +878,32 @@ button{
 }
 .footer-col ul li a:hover{
   opacity: 0.7;
-  padding-left: 5px;
+  padding-left: 0.3rem;
 }
 .links{
   position: relative;
-  top: 60px;
-  right: 60px;
+  top: 3.7rem;
+  right: 3.7rem;
 }
 .footer-bottom{
   background: #adffd1;
   color: #59826b;
-  height: 50px;
+  height: 3rem;
   width: 100%;
   text-align: center;
   position: absolute;
   bottom: 0;
   left: 0;
-  padding-top: 20px;
+  padding-top: 1.3rem;
 }
 .footer-col i{
-  font-size: 20px;
-  letter-spacing: 20px;
+  font-size: 1.3rem;
+  letter-spacing: 1.3rem;
 }
 .newsletter input{
   border-color: var(--highlight);
-  border-radius: 5px;
-  padding: 6px;
+  border-radius: 0.3rem;
+  padding: 0.4rem;
   font-size: 0.9rem;
   width: 300px;
   background: #adffd1;
@@ -889,16 +914,16 @@ button{
   margin-left: 15px;
   border-style: solid;
   opacity: 0.9;
-  font-weight: 300;
+  font-weight: 18.7rem;
   border-color: var(--primary);
   font-family: inherit;
   cursor: pointer;
-  width: 100px;
-  height: 30px;
+  width: 6rem;
+  height: 1.87rem;
   background: transparent;
   transition: var(--transition);
   padding: 0.4rem 0;
-  border-width: 0.5px;
+  border-width: 0.03rem;
   color: var(--secondary);
 }
 .newsletter button:hover{
