--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device=width, initial-scale=1">
         {% load static %}
-        <link rel="stylesheet" href="{% static '/css/style.css' %}">
+        <link rel="stylesheet" href="{% static '/css/stylee.css' %}">
         <script src="https://kit.fontawesome.com/f363b53072.js"></script>
     </head>
     
@@ -17,8 +17,8 @@
     <footer>
         {% include 'pages/footer.html' %}
     </footer>
-    </body>
-    
 
-    {% block js %}<!--Lo mismo aca, esto se reemplaza poniendo % block js % en el archivo html-->{% endblock %}
+    <script src="{% static 'javascript/script-home.js' %}"></script>
+    <script src="{% static 'javascript/scripts.js' %}"></script>
+    </body>
 </html>
