--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="card-list" id="card-list">
-        <h2 class="banner-card">Pre-Order now our next collection season.</h2>
+        <h2 class="banner-card">Pre-Order now our next collection season</h2>
         <button class="arrows one" id="slide-left"><i class="fas fa-angle-left"></i></button>
     <div class="card-container" id="card-container">
         
@@ -160,6 +160,163 @@
                     document.getElementById('card-container').scrollLeft += 180
                 })
         </script>
+
+    <div class="card-new">
+        <h2 class="banner-new">New arrivals for your collection</h2>
+        <button class="arrows one" id="slide-left"><i class="fas fa-angle-left"></i></button>
+    <div class="card-container" id="card-container">
+    
+    <div class="card" id="card">
+    
+        <div class="card-header">
+            <img src="{% static 'images/jordantee1.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">Supreme Jordan Tee</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-price">$300.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Add to cart
+                </button>
+            </a>
+        </div>
+    </div>
+    <div class="card" id="card">
+    
+    <div class="card-header">
+        <img src="{% static 'images/outerwear2.jpg' %}">
+    </div>
+    <div class="card-body">
+        <h4 class="product-title">Supreme The North Face</h4>
+        <p class="product-status">Ships in 3-4 days</p>
+        <h3 class="product-price">$985.00</h3>
+    </div>
+    <div class="card-footer">
+        <a href="#">
+            <button class="card-btn btn-secondary">
+                Info
+            </button>
+        </a>
+        <a href="#">
+            <button class="card-btn btn-primary">
+                Add to cart
+            </button>
+        </a>
+    </div>
+    </div>
+    <div class="card" id="card">
+    
+        <div class="card-header">
+            <img src="{% static 'images/bapehoodie1.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">BAPE x XO Hoodie</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-price">$787.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Add to cart
+                </button>
+            </a>
+        </div>
+    </div>
+
+    </div>
+    </div>
+    <div class="card-off">
+        <h2 class="banner-off">Special offers from the last collection</h2>
+        <button class="arrows one" id="slide-left"><i class="fas fa-angle-left"></i></button>
+    <div class="card-container" id="card-container">
+    
+    <div class="card" id="card">
+    
+        <div class="card-header">
+            <img src="{% static 'images/yeezy1.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">Yeezy Boost 350 v2 Zebra</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-oldprice">$460.00</h3>
+            <h3 class="product-newprice">$375.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Add to cart
+                </button>
+            </a>
+        </div>
+    </div>
+    <div class="card" id="card">
+    
+    <div class="card-header">
+        <img src="{% static 'images/fogtee1.jpg' %}">
+    </div>
+    <div class="card-body">
+        <h4 class="product-title">FEAR OF GOD 6th Collection</h4>
+        <p class="product-status">Ships in 3-4 days</p>
+        <h3 class="product-oldprice">$208.00</h3>
+        <h3 class="product-newprice">$108.00</h3>
+    </div>
+    <div class="card-footer">
+        <a href="#">
+            <button class="card-btn btn-secondary">
+                Info
+            </button>
+        </a>
+        <a href="#">
+            <button class="card-btn btn-primary">
+                Add to cart
+            </button>
+        </a>
+    </div>
+    </div>
+    <div class="card" id="card">
+    
+        <div class="card-header">
+            <img src="{% static 'images/kithtee1.jpg' %}">
+        </div>
+        <div class="card-body">
+            <h4 class="product-title">Kith Moncler Tee</h4>
+            <p class="product-status">Ships in 3-4 days</p>
+            <h3 class="product-oldprice">$422.00</h3>
+            <h3 class="product-newprice">$235.00</h3>
+        </div>
+        <div class="card-footer">
+            <a href="#">
+                <button class="card-btn btn-secondary">
+                    Info
+                </button>
+            </a>
+            <a href="#">
+                <button class="card-btn btn-primary">
+                    Add to cart
+                </button>
+            </a>
+        </div>
+    </div>
+
+    </div>
     </div>
 </body>
 
